--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "2.0.0-DEV",
+  "version": "2.1.0-DEV",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "@types/localforage": "^0.0.34",
     "@types/lodash": "^4.14.196",
     "@types/react-modal": "^3.16.0",
+    "@uiw/react-md-editor": "^3.23.5",
     "apollo-link-token-refresh": "^0.6.0",
     "axios": "^1.4.0",
     "flowbite": "^1.8.1",
@@ -35,6 +36,7 @@
     "react-icons": "^4.10.1",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
@@ -44,6 +46,8 @@
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "rehype-sanitize": "^5.0.1",
+    "remark-gfm": "^3.0.1",
     "reselect": "^4.1.8",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.4",
@@ -53,6 +57,7 @@
   },
   "devDependencies": {
     "@react-spring/types": "^9.7.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
